force-app/main/default/objects/Termination__c/Termination__c.object-meta.xml
<CustomObject>
    <label>Termination</label>
    <nameField>
        <label>Termination/Removal Site ID</label>
        
        <type>Text</type>
    </nameField>
    <pluralLabel>Terminations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>