force-app/main/default/objects/Termination__c/fields/Account_Record_Type_name__c.field-meta.xml
<CustomField>
    <fullName>Account_Record_Type_name__c</fullName>
    <formula>Account_Name__r.RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Record Type name</label>
    <type>Text</type>
</CustomField>