force-app/main/default/objects/Termination__c/fields/Annual_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Annual_Revenue__c</fullName>
    <inlineHelpText>Annual revenue amount generated over the last year</inlineHelpText>
    <label>Annual Revenue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>