force-app/main/default/objects/Termination__c/fields/ATM_Surcharge_Fee__c.field-meta.xml
<CustomField>
    <fullName>ATM_Surcharge_Fee__c</fullName>
    <label>ATM Surcharge Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>