force-app/main/default/objects/Termination__c/fields/Business_Unit1__c.field-meta.xml
<CustomField>
    <fullName>Business_Unit1__c</fullName>
    <formula>Account_Name__r.Business_Unit__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Business Unit</label>
    <type>Text</type>
</CustomField>