force-app/main/default/objects/Termination__c/fields/Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>Business_Unit__c</fullName>
    <label>Business Unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>IBG (Core)</fullName>
            </value>
            <value>
                <fullName>Retail (Corporate)</fullName>
            </value>
            <value>
                <fullName>FI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>