force-app/main/default/objects/Termination__c/fields/Date_proposal_rejected__c.field-meta.xml
<CustomField>
    <fullName>Date_proposal_rejected__c</fullName>
    <label>Date proposal rejected</label>
    <type>Date</type>
</CustomField>