force-app/main/default/objects/Termination__c/fields/Date_proposal_sent_to_contact__c.field-meta.xml
<CustomField>
    <fullName>Date_proposal_sent_to_contact__c</fullName>
    <label>Date proposal sent to contact</label>
    <type>Date</type>
</CustomField>