force-app/main/default/objects/Termination__c/fields/Do_Liquadated_Damages_Apply__c.field-meta.xml
<CustomField>
    <fullName>Do_Liquadated_Damages_Apply__c</fullName>
    <label>Do Liquadated Damages Apply?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>