force-app/main/default/objects/Termination__c/fields/FTU_PTU_ATM__c.field-meta.xml
<CustomField>
    <fullName>FTU_PTU_ATM__c</fullName>
    <label>FTU/PTU ATM?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>FTU</fullName>
            </value>
            <value>
                <fullName>PTU</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>