force-app/main/default/objects/Termination__c/fields/Is_Removal_Billable_to_Client__c.field-meta.xml
<CustomField>
    <fullName>Is_Removal_Billable_to_Client__c</fullName>
    <label>Is Removal Billable to Client?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>