force-app/main/default/objects/Termination__c/fields/Liquidated_Damages_Amount__c.field-meta.xml
<CustomField>
    <fullName>Liquidated_Damages_Amount__c</fullName>
    <label>Liquidated Damages Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>