force-app/main/default/objects/Termination__c/fields/Monthly_Gross_Margin__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Gross_Margin__c</fullName>
    <label>Monthly Gross Margin</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>