force-app/main/default/objects/Termination__c/fields/of_TXNs_CATM_ATM_will_pick_up__c.field-meta.xml
<CustomField>
    <fullName>of_TXNs_CATM_ATM_will_pick_up__c</fullName>
    <label>% of TXNs CATM ATM will pick up</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0%</fullName>
            </value>
            <value>
                <fullName>25%</fullName>
            </value>
            <value>
                <fullName>50%</fullName>
            </value>
            <value>
                <fullName>75%</fullName>
            </value>
            <value>
                <fullName>100%</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>