force-app/main/default/objects/Termination__c/fields/Removal_Reason_Comments__c.field-meta.xml
<CustomField>
    <fullName>Removal_Reason_Comments__c</fullName>
    <label>Removal Reason Comments</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>