force-app/main/default/objects/Termination__c/fields/Replen_Method__c.field-meta.xml
<CustomField>
    <fullName>Replen_Method__c</fullName>
    <label>Replen Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CiT Fill</fullName>
            </value>
            <value>
                <fullName>Merchant Fill</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>