force-app/main/default/objects/Termination__c/fields/Site_Contact_Number__c.field-meta.xml
<CustomField>
    <fullName>Site_Contact_Number__c</fullName>
    <label>Site Contact Number</label>
    <type>Phone</type>
</CustomField>