force-app/main/default/objects/Termination__c/fields/temp_termination__c.field-meta.xml
<CustomField>
    <fullName>temp_termination__c</fullName>
    <displayFormat>T-{000000}</displayFormat>
    <label>temp termination #</label>
    <type>AutoNumber</type>
</CustomField>