force-app/main/default/objects/Termination__c/fields/Termination__c.field-meta.xml
<CustomField>
    <fullName>Termination__c</fullName>
    <displayFormat>T-{000000}</displayFormat>
    <label>Termination #</label>
    <type>AutoNumber</type>
</CustomField>