force-app/main/default/objects/Termination__c/recordTypes/Removals.recordType-meta.xml
<RecordType>
    <fullName>Removals</fullName>
    <active>true</active>
    <label>Removals</label>
</RecordType>