force-app/main/default/objects/Termination__c/recordTypes/Terminations.recordType-meta.xml
<RecordType>
    <fullName>Terminations</fullName>
    <active>true</active>
    <label>Terminations</label>
</RecordType>