force-app/main/default/objects/Termination__c/validationRules/Add_Deinstallation_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Add_Deinstallation_Date</fullName>
    <active>true</active>
    <errorConditionFormula>AND( 
!$Setup.Automation_Setting__c.Skip_Validation_Rule__c, 
ISPICKVAL(Termination_Status__c ,&apos;De-installed&apos;),
ISBLANK( De_install_Date__c ) 
)</errorConditionFormula>
    <errorMessage>Please add “De-Install Date”</errorMessage>
</ValidationRule>