force-app/main/default/objects/Termination__c/validationRules/Asbestos_Survey_Required_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Asbestos_Survey_Required_validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
!$Setup.Automation_Setting__c.Skip_Validation_Rule__c, 
OR(
 $Permission.CATM_IBG_Manager = true,
 $Permission.CATM_IBG_User = true
),
ISPICKVAL(Owner:User.Geography__c , &quot;UK&quot;),ISPICKVAL( Asbestos_Survey_Required__c,&quot;&quot;), RecordType.Name =&apos;Removals&apos;)</errorConditionFormula>
    <errorDisplayField>Asbestos_Survey_Required__c</errorDisplayField>
    <errorMessage>Please fill the Asbestos Survey Required?</errorMessage>
</ValidationRule>