force-app/main/default/objects/Termination__c/validationRules/Cancelled_status_lock_for_editing.validationRule-meta.xml
<ValidationRule>
    <fullName>Cancelled_status_lock_for_editing</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
!$Setup.Automation_Setting__c.Skip_Validation_Rule__c, 
ISPICKVAL(PRIORVALUE(Termination_Status__c),&quot;Cancelled&quot;),
$Permission.CATM_Sys_Admin = false)</errorConditionFormula>
    <errorMessage>Record is locked , Please contact Sales Support #</errorMessage>
</ValidationRule>