force-app/main/default/objects/Termination__c/validationRules/De_installed_status_can_not_changed.validationRule-meta.xml
<ValidationRule>
    <fullName>De_installed_status_can_not_changed</fullName>
    <active>false</active>
    <description>De-installed status is the final status you can&apos;t move to other status.</description>
    <errorConditionFormula>!$Setup.Automation_Setting__c.Skip_Validation_Rule__c &amp;&amp;
IF(
OR(
AND($Profile.Name &lt;&gt;&apos;System Administrator&apos;,$Profile.Name &lt;&gt;&apos;Legal Team&apos;,
ISPICKVAL(PRIORVALUE(Termination_Status__c),&quot;De-installed&quot;), OR(ISPICKVAL(Termination_Status__c,&quot;Pending Removal&quot;),ISPICKVAL(Termination_Status__c,&quot;Requested&quot;),ISPICKVAL(Termination_Status__c,&quot;Cancelled&quot;),ISPICKVAL(Termination_Status__c,&quot;Awaiting Approval&quot;))
)

)

, true, false)</errorConditionFormula>
    <errorMessage>Incorrect status selected, please contact Sales Support</errorMessage>
</ValidationRule>