force-app/main/default/objects/Termination__c/validationRules/De_installed_then_Record_is_locked.validationRule-meta.xml
<ValidationRule>
    <fullName>De_installed_then_Record_is_locked</fullName>
    <active>true</active>
    <description>lock the record</description>
    <errorConditionFormula>AND(
!$Setup.Automation_Setting__c.Skip_Validation_Rule__c, 
ISPICKVAL( Termination_Status__c , &quot;De-installed&quot;),
NOT(ISPICKVAL(PRIORVALUE(Termination_Status__c),&quot;Pending Removal&quot;)),
 $Permission.CATM_Sys_Admin = false)</errorConditionFormula>
    <errorMessage>Record is locked , Please contact Sales Support</errorMessage>
</ValidationRule>