force-app/main/default/objects/Termination__c/validationRules/Industry_Segment_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Industry_Segment_validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
!$Setup.Automation_Setting__c.Skip_Validation_Rule__c,
OR( $Permission.CATM_IBG_Manager = true,
 $Permission.CATM_IBG_User = true),OR(ISPICKVAL(Owner:User.Geography__c , &quot;Australia&quot;),ISPICKVAL(Owner:User.Geography__c , &quot;New Zealand&quot;)), ISPICKVAL(Industry_Segment__c ,&apos;&apos;),  RecordType.Name =&apos;Removals&apos;)</errorConditionFormula>
    <errorDisplayField>Industry_Segment__c</errorDisplayField>
    <errorMessage>Please fill the Industry Segment field</errorMessage>
</ValidationRule>