force-app/main/default/objects/Termination__c/validationRules/Is_Removal_Billable_to_Client_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Is_Removal_Billable_to_Client_validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
!$Setup.Automation_Setting__c.Skip_Validation_Rule__c, 
OR( $Permission.CATM_IBG_Manager = true,
 $Permission.CATM_IBG_User = true),
OR(ISPICKVAL(Owner:User.Geography__c , &quot;Australia&quot;),ISPICKVAL(Owner:User.Geography__c , &quot;New Zealand&quot;)), ISPICKVAL(Is_Removal_Billable_to_Client__c,&apos;Yes&apos;),ISBLANK(Removal_Amount_Billable_to_Client__c ), RecordType.Name = &apos;Removals&apos;)</errorConditionFormula>
    <errorDisplayField>Removal_Amount_Billable_to_Client__c</errorDisplayField>
    <errorMessage>Please fill the &apos;Removal Amount Billable to Client&apos;</errorMessage>
</ValidationRule>