force-app/main/default/objects/Termination__c/validationRules/Monthly_Gross_Margin.validationRule-meta.xml
<ValidationRule>
    <fullName>Monthly_Gross_Margin</fullName>
    <active>false</active>
    <errorConditionFormula>AND(OR( $Permission.CATM_IBG_Manager = true,
 $Permission.CATM_IBG_User = true),OR(ISPICKVAL(Owner:User.Geography__c , &quot;Australia&quot;),ISPICKVAL(Owner:User.Geography__c , &quot;New Zealand&quot;)),   ISBLANK (Monthly_Gross_Margin__c),  RecordType.Name =&apos;Removals&apos;)</errorConditionFormula>
    <errorDisplayField>Industry_Segment__c</errorDisplayField>
    <errorMessage>Please fill the Industry Segment field</errorMessage>
</ValidationRule>