force-app/main/default/objects/Termination__c/validationRules/Protected_validation_Retail_UK.validationRule-meta.xml
<ValidationRule>
    <fullName>Protected_validation_Retail_UK</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
!$Setup.Automation_Setting__c.Skip_Validation_Rule__c,
OR( $Permission.CATM_Retail_Manager = true,
 $Permission.CATM_Retail_User = true),ISPICKVAL(Owner:User.Geography__c , &quot;UK&quot;),ISPICKVAL( Protected__c,&quot;&quot;), RecordType.Name =&apos;Removals&apos;)</errorConditionFormula>
    <errorDisplayField>Protected__c</errorDisplayField>
    <errorMessage>Please update the &quot;Protected?&quot; field</errorMessage>
</ValidationRule>