force-app/main/default/objects/Termination__c/validationRules/Removal_Cancellation_Reason.validationRule-meta.xml
<ValidationRule>
    <fullName>Removal_Cancellation_Reason</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
!$Setup.Automation_Setting__c.Skip_Validation_Rule__c, 
ISPICKVAL(Termination_Status__c ,&apos;Cancelled&apos;),ISBLANK( Removal_Cancellation_Reason__c ) )</errorConditionFormula>
    <errorMessage>Please complete “Removal Cancellation Reason”</errorMessage>
</ValidationRule>