force-app/main/default/objects/Termination__c/validationRules/Removal_stages_can_not_move_backwards.validationRule-meta.xml
<ValidationRule>
    <fullName>Removal_stages_can_not_move_backwards</fullName>
    <active>true</active>
    <errorConditionFormula>!$Setup.Automation_Setting__c.Skip_Validation_Rule__c &amp;&amp;
IF(
OR(
AND( $Permission.CATM_Sys_Admin = false,
ISPICKVAL(PRIORVALUE(Termination_Status__c),&quot;Pending Removal&quot;),OR(ISPICKVAL(Termination_Status__c,&quot;Requested&quot;),ISPICKVAL(Termination_Status__c,&quot;Awaiting Approval&quot;))
),
AND( $Permission.CATM_Sys_Admin = false,
ISPICKVAL(PRIORVALUE(Termination_Status__c),&quot;De-installed&quot;), OR(ISPICKVAL(Termination_Status__c,&quot;Pending Removal&quot;),ISPICKVAL(Termination_Status__c,&quot;Requested&quot;),ISPICKVAL(Termination_Status__c,&quot;Awaiting Approval&quot;))
),
AND( $Permission.CATM_Sys_Admin = false,
ISPICKVAL(PRIORVALUE(Termination_Status__c),&quot;Cancelled&quot;), OR(ISPICKVAL(Termination_Status__c,&quot;Pending Removal&quot;),ISPICKVAL(Termination_Status__c,&quot;Requested&quot;),ISPICKVAL(Termination_Status__c,&quot;De-installed&quot;),ISPICKVAL(Termination_Status__c,&quot;Awaiting Approval&quot;))
)

)

, true, false)</errorConditionFormula>
    <errorMessage>You cannot go back to the previous status, please contact Sales Support</errorMessage>
</ValidationRule>