force-app/main/default/objects/Termination__c/validationRules/Replen_Method_can_not_be_changed.validationRule-meta.xml
<ValidationRule>
    <fullName>Replen_Method_can_not_be_changed</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
!$Setup.Automation_Setting__c.Skip_Validation_Rule__c,
ISPICKVAL(PRIORVALUE(Termination_Status__c),&quot;Pending Removal&quot;), ISCHANGED( Replen_Method__c), 
$Permission.CATM_Sys_Admin = false)</errorConditionFormula>
    <errorMessage>Please contact your Support Team</errorMessage>
</ValidationRule>