force-app/main/default/objects/Termination__c/validationRules/Site_Contact_Name_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Site_Contact_Name_validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
!$Setup.Automation_Setting__c.Skip_Validation_Rule__c, 
OR( $Permission.CATM_IBG_Manager = true,
 $Permission.CATM_IBG_User = true),OR(ISPICKVAL(Owner:User.Geography__c , &quot;Australia&quot;),ISPICKVAL(Owner:User.Geography__c , &quot;New Zealand&quot;),ISPICKVAL(Owner:User.Geography__c , &quot;UK&quot;)), ISBLANK( Site_Contact_Name__c ), RecordType.Name =&apos;Removals&apos;)</errorConditionFormula>
    <errorDisplayField>Site_Contact_Name__c</errorDisplayField>
    <errorMessage>Please fill the Site Contact Name</errorMessage>
</ValidationRule>