force-app/main/default/objects/Termination__c/validationRules/Stage_for_accepted_termination.validationRule-meta.xml
<ValidationRule>
    <fullName>Stage_for_accepted_termination</fullName>
    <active>true</active>
    <description>Termination stage can&apos;t be moved back wards.only system Admins can change the stage to back wards</description>
    <errorConditionFormula>!$Setup.Automation_Setting__c.Skip_Validation_Rule__c &amp;&amp;
IF(
OR(
AND($Permission.CATM_Sys_Admin = false,
ISPICKVAL(PRIORVALUE(Termination_Status__c),&quot;Active&quot;), (ISPICKVAL(Termination_Status__c,&quot;Awaiting Review&quot;))
),
AND($Permission.CATM_Sys_Admin = false,
ISPICKVAL(PRIORVALUE(Termination_Status__c),&quot;Closed&quot;), OR(ISPICKVAL(Termination_Status__c,&quot;Awaiting Review&quot;),ISPICKVAL(Termination_Status__c,&quot;Active&quot;))
)

)

, true, false)</errorConditionFormula>
    <errorDisplayField>Termination_Status__c</errorDisplayField>
    <errorMessage>You cannot change termination stage, please contact sales support.</errorMessage>
</ValidationRule>