force-app/main/default/objects/Termination__c/validationRules/Termination_Closure_Reason.validationRule-meta.xml
<ValidationRule>
    <fullName>Termination_Closure_Reason</fullName>
    <active>true</active>
    <description>when the termination is Closed,Need to enter the Closure reason</description>
    <errorConditionFormula>AND (
!$Setup.Automation_Setting__c.Skip_Validation_Rule__c,
OR (ISPICKVAL( Termination_Status__c , &quot;Closed&quot;)),
ISPICKVAL(  Termination_Closure_Reason__c  ,&apos;&apos; )

)</errorConditionFormula>
    <errorDisplayField>Termination_Closure_Reason__c</errorDisplayField>
    <errorMessage>Please select the Closure Reason for Termination</errorMessage>
</ValidationRule>