force-app/main/default/objects/Termination__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>CATM All</label>
    <sharedTo>
        <role>UK_ROI_IBG_Retail_Teams_Leader</role>
        <role>UK_ROI_IBG_Team_Mngr</role>
        <role>UK_ROI_IBG_Team_TEs</role>
        <role>UK_ROI_IBG_Team_TMs</role>
    </sharedTo>
</ListView>