force-app/main/default/objects/Termination__c/listViews/AUS_Removals.listView-meta.xml
<ListView>
    <fullName>AUS_Removals</fullName>
    <columns>NAME</columns>
    <columns>Account_Name__c</columns>
    <columns>Termination_Status__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Geography__c</field>
        <operation>equals</operation>
        <value>Australia,New Zealand</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Termination__c.Removals</value>
    </filters>
    <label>CATM AUS Removals</label>
</ListView>