force-app/main/default/objects/Termination__c/listViews/My_Cancelled_Removals.listView-meta.xml
<ListView>
    <fullName>My_Cancelled_Removals</fullName>
    <columns>NAME</columns>
    <columns>Account_Name__c</columns>
    <columns>Site_Name__c</columns>
    <columns>Removal_Reason__c</columns>
    <columns>ATM_Type__c</columns>
    <columns>Termination_Status__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Termination_Status__c</field>
        <operation>equals</operation>
        <value>Cancelled</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Termination__c.Removals</value>
    </filters>
    <label>CATM My Cancelled Removals</label>
</ListView>