force-app/main/default/objects/Termination__c/listViews/My_Completed_De_installs.listView-meta.xml
<ListView>
    <fullName>My_Completed_De_installs</fullName>
    <columns>NAME</columns>
    <columns>Account_Name__c</columns>
    <columns>Site_Name__c</columns>
    <columns>Removal_Reason__c</columns>
    <columns>ATM_Type__c</columns>
    <columns>Termination_Status__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Termination_Status__c</field>
        <operation>equals</operation>
        <value>De-installed</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Termination__c.Removals</value>
    </filters>
    <filters>
        <field>De_install_Date__c</field>
        <operation>equals</operation>
        <value>THIS_YEAR</value>
    </filters>
    <label>CATM My Completed De-installs Cur. Year</label>
</ListView>